# rascore

./: LICENSE  README.md  index.html  packages.txt  pyproject.toml  rascore-app.py  rascore.py  rascore.toml  rascore_env.yml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
rascore/: __init__.py  app_rascore.py  build_rascore.py  classify_rascore.py  cluster_rascore.py  plot_rascore.py  prep_rascore.py  pymol_rascore.py  table_rascore.py  update_rascore.py
rascore/PDBrenum/: PDBrenum.py
rascore/constants/: __init__.py  conf.py  dimer.py  gene.py  mut.py  nuc.py  pharm.py  pml.py  prot.py
rascore/data/: entry.txt
rascore/functions/: __init__.py  chem.py  cluster.py  col.py  color.py  coord.py  dih.py  download.py  file.py  interf.py  lig.py  lst.py  path.py  pdbaa.py  plot.py  seq.py  stat.py  table.py  url.py
rascore/pages/: home_page.py  pdb_page.py  query_page.py
rascore/pdbcore/: build_dist_table.py  sup_interf.py  write_pymol_script.py
rascore/scripts/: __init__.py  annot_cf.py  annot_lig.py  annot_mut.py  annot_prot.py  build_dih_matrix.py  build_dih_table.py  build_dist_matrix.py  build_dist_table.py  build_edia_table.py  build_interf_matrix.py  build_interf_table.py  build_pocket_matrix.py  build_pocket_table.py  build_rmsd_matrix.py  classify_matrix.py  cluster_matrix.py  make_facet_plot.py  make_heatmap_plot.py  mask_dih_data.py  prep_coord.py  prep_dih.py  prep_edia.py  prep_interf.py  prep_pocket.py  search_pdbaa.py  sup_interf.py  write_pymol_script.py
src/: build_rascore.py  classify_rascore.py  prep_rascore.py
src/constants/: conf.py  pharm.py
src/functions/: col.py  dih.py  download.py  lig.py  path.py
(+459 files in other folders)
