[tool.poetry]
name = "rascore"
version = "0.1.19"
description = "A tool for analyzing the conformations of RAS structures"
authors = ["mitch-parker <mitch.isaac.parker@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pendulum = ">=2.1.2"
Bio = ">=1.3.3"
CairoSVG = ">=2.5.2"
lxml = ">=4.6.3"
matplotlib = ">=3.3.4"
matplotlib_venn = ">=0.11.6"
numpy = ">=1.20.1"
pandas = ">=1.2.4"
requests = ">=2.25.1"
scipy = ">=1.6.2"
seaborn = ">=0.11.1"
statannot = ">=0.2.3"
statsmodels = ">=0.12.2"
streamlit = ">=1.4.0"
tqdm = ">=4.59.0"
pyfiglet = ">=0.8.post1"
rdkit-pypi = ">=2021.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rascore = "rascore.rascore-cli:cli"
