[tool.poetry]
name = "rascore"
version = "0.2.5"
description = "A tool for analyzing RAS protein structures"
authors = ["mitch-parker <mip34@drexel.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "3.8"
pendulum = "2.1.2"
Bio = "1.3.3"
lxml = "4.6.5"
matplotlib = "3.3.4"
matplotlib_venn = "0.11.6"
numpy = "1.21"
pandas = "1.3.5"
Pillow = "9.0.1"
py3Dmol = "1.8.0"
pyfiglet = "0.8.post1"
rdkit_pypi = "2021.9.5.1"
requests = "2.25.1"
scipy = "1.6.2"
seaborn = "0.11.1"
statannot = "0.2.3"
statsmodels = "0.13.1"
stmol = "0.0.7"
streamlit = "1.4.0"
tqdm = "4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rascore = "rascore.rascore_cli:cli"

